--- a/plists/esign.plist
+++ b/plists/esign.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://api.starfiles.co/installipa/b98f3c78a8f6</string>
+                    <string>https://sign.lunignt.rf.gd/ipas/esign.ipa</string>
                 </dict>
                 <dict>
 		    <key>kind</key>
@@ -29,13 +29,13 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>p3.xyz.yyyue.esign</string>
+                <string>p3.xyz.yyyue.esignX</string>
                 <key>bundle-version</key>
                 <string>1.0</string>
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>ESign Signed by Lunight</string>
+                <string>ESign</string>
             </dict>
         </dict>
     </array>
