--- a/plists/scarlet.plist
+++ b/plists/scarlet.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://sign.lunight.rf.gd/ipas/scarlet.ipa</string>
+                    <string>https://sign.lunight.rf.gd/ipas/Scarlet.ipa</string>
                 </dict>
                 <dict>
 		    <key>kind</key>
