--- a/plists/esign.plist
+++ b/plists/esign.plist
@@ -17,13 +17,13 @@
 		    <key>kind</key>
 		    <string>display-image</string>
 		    <key>url</key>
-		    <string>https://sign.lunight.rf.gd/loadingimage.png</string>
+		    <string>https://sign.lunight.rf.gd/loadingImage.jpeg</string>
 		</dict>
 		<dict>
 		    <key>kind</key>
 		    <string>full-size-image</string>
 		    <key>url</key>
-		    <string>https://sign.lunight.rf.gd/images/loadingimage.png</string>
+		    <string>https://sign.lunight.rf.gd/images/loadingImage.jpeg</string>
 		</dict>
             </array>
             <key>metadata</key>
