--- a/plists/esign.plist
+++ b/plists/esign.plist
@@ -29,7 +29,7 @@
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>p3.yyyue.xyz.esign</string>
+                <string>com.lunight.chxrgxr</string>
                 <key>bundle-version</key>
                 <string>1.0</string>
                 <key>kind</key>
