--- a/plists/scarlet.plist
+++ b/plists/scarlet.plist
@@ -17,7 +17,7 @@
 		    <key>kind</key>
 		    <string>display-image</string>
 		    <key>url</key>
-		    <string>https://sign.lunight.rf.gd/loadingImage.jpeg</string>
+		    <string>https://sign.lunight.rf.gd/images/loadingImage.jpeg</string>
 		</dict>
 		<dict>
 		    <key>kind</key>
