--- a/plists/esign.plist
+++ b/plists/esign.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://download.starfiles.co/9fc6256b9c37</string>
+                    <string>https://sign.lunight.rf.gd/ipas/esign.ipa</string>
                 </dict>
                 <dict>
 		    <key>kind</key>
