--- a/plists/esign.plist
+++ b/plists/esign.plist
@@ -35,7 +35,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>ESign</string>
+                <string>ESign Signed</string>
             </dict>
         </dict>
     </array>
