--- a/plists/scarlet.plist
+++ b/plists/scarlet.plist
@@ -35,7 +35,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>Scarlet</string>
+                <string>Scarlet Signed</string>
             </dict>
         </dict>
     </array>
