--- a/plists/esign.plist
+++ b/plists/esign.plist
@@ -11,19 +11,19 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://sign.lunight.rf.gd/ipas/esign.ipa</string>
+                    <string>https://chxrgxr.github.io/ipas/esign_signed.ipa</string>
                 </dict>
                 <dict>
 		    <key>kind</key>
 		    <string>display-image</string>
 		    <key>url</key>
-		    <string>https://sign.lunight.rf.gd/images/loadingImage.jpeg</string>
+		    <string>https://chxrgxr.github.io/images/loadingImage.jpeg</string>
 		</dict>
 		<dict>
 		    <key>kind</key>
 		    <string>full-size-image</string>
 		    <key>url</key>
-		    <string>https://sign.lunight.rf.gd/images/loadingImage.jpeg</string>
+		    <string>https://chxrgxr.github.io/images/loadingImage.jpeg</string>
 		</dict>
             </array>
             <key>metadata</key>
@@ -35,7 +35,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>ESign Signed</string>
+                <string>ESign</string>
             </dict>
         </dict>
     </array>
