--- a/plists/esign.plist
+++ b/plists/esign.plist
@@ -1,43 +1,42 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd …">
 <plist version="1.0">
 <dict>
-    <key>items</key>
-    <array>
-        <dict>
-            <key>assets</key>
-            <array>
-                <dict>
-                    <key>kind</key>
-                    <string>software-package</string>
-                    <key>url</key>
-                    <string>https://chxrgxr.github.io/ipas/esign_signed.ipa</string>
-                </dict>
-                <dict>
-		    <key>kind</key>
-		    <string>display-image</string>
-		    <key>url</key>
-		    <string>https://chxrgxr.github.io/images/loadingImage.jpeg</string>
-		</dict>
-		<dict>
-		    <key>kind</key>
-		    <string>full-size-image</string>
-		    <key>url</key>
-		    <string>https://chxrgxr.github.io/images/loadingImage.jpeg</string>
-		</dict>
-            </array>
-            <key>metadata</key>
-            <dict>
-                <key>bundle-identifier</key>
-                <string>p3.xyz.yyyue.esign</string>
-                <key>bundle-version</key>
-                <string>1.0</string>
-                <key>kind</key>
-                <string>software</string>
-                <key>title</key>
-                <string>ESign</string>
-            </dict>
-        </dict>
-    </array>
+<key>items</key>
+<array>
+<dict>
+<key>assets</key>
+<array>
+<dict>
+<key>kind</key>
+<string>software-package</string>
+<key>url</key>
+<string>https://chxrgxr.github.io/ipas/esign_signed.ipa</string>
 </dict>
-</plist>
+<dict>
+<key>kind</key>
+<string>display-image</string>
+<key>url</key>
+<string>https://chxrgxr.github.io/images/loadingImage.jpeg</string>
+</dict>
+<dict>
+<key>kind</key>
+<string>full-size-image</string>
+<key>url</key>
+<string>https://chxrgxr.github.io/images/loadingImage.jpeg</string>
+</dict>
+</array>
+<key>metadata</key>
+<dict>
+<key>bundle-identifier</key>
+<string>com.chxrgxr.esign</string>
+<key>bundle-version</key>
+<string>1</string>
+<key>kind</key>
+<string>software</string>
+<key>title</key>
+<string>Installing ESign..</string>
+</dict>
+</dict>
+</array>
+</dict>
+</plist> 
